interaction icon spacing, navcollapse bg color fix

--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -121,6 +121,7 @@
   font-size: 20px;
   color: white;
   border-radius: 50%;
+  margin-bottom: .5%;
 }
 
 .post-button{
@@ -285,6 +286,11 @@ body, nav, .modal-content {
 
 nav{
   height: 75px;
+}
+
+.navbar-collapse
+{
+  background-color:rgb(6, 6, 7);
 }
 
 /* font */
